# mpc_controller

./: .gitignore  CMakeLists.txt  README.md  mpc_controller_plugin.xml  package.xml
config/: common_params.yaml
config/pr2/: initial_pose.yaml  ros2_controllers.yaml  task.info
config/ridgeback_ur5/: ridgeback_ur5_ros2_control.yaml  ros2_controllers.yaml  task.info
config/robot/: initial_pose.yaml  task.info
config/rviz/: manipulator.rviz  mobile_manipulator.rviz
config/ur5/: initial_pose.yaml  ros2_controllers.yaml  task.info
description/pr2/urdf/: pr2.ros2_control.xacro
description/ridgeback_ur5/urdf/: ridgeback_ur5.urdf  ur5.ros2_control.xacro  ur5_arm_ros2_control.urdf.xacro
description/ur5/urdf/: ur5.ros2_control.xacro  ur5.urdf
include/mpc_controller/control/: OCS2Controller.hpp  OCS2Controller_backup.hpp  OCS2Controller_new.hpp  OCS2Controller_old.hpp
include/mpc_controller/mpc/: MobileManipulatorRosReferenceManager.h
include/mpc_controller/visualization/: EnvironmentCollisionVisualization.h  MobileManipulatorVisualization.h  SphereSelfCollisionVisualization.h
launch/: controller_sequence.py  example.py  fake_wrench.launch.py  pr2.launch.py  pub_fake_wrench.py  ridgeback_ur5.launch.py  ridgeback_ur5_marker.launch.py  ridgeback_ur5_mpc.launch.py  ur5.launch.py
launch/command/: cartesian_tt.launch.py  joint.launch.py  joint_trajectory.launch.py  marker.launch.py  trajectory.launch.py  twist.launch.py
launch/common/: config_utils.py  urdf_utils.py
launch/visualization/: visualize.launch.py
src/command/: MobileManipulatorJointTarget.cpp  MobileManipulatorJointTrajectoryTarget.cpp  MobileManipulatorMarkerTarget.cpp  MobileManipulatorTrajectoryTarget.cpp  MobileManipulatorTwistTarget.cpp
src/control/: OCS2Controller.cpp  OCS2Controller_backup.cpp  OCS2Controller_new.cpp  OCS2Controller_old.cpp
src/mpc/: MobileManipulatorMpcNode.cpp  MobileManipulatorRosReferenceManager.cpp  MobileManipulatorSqpMpcNode.cpp
src/sim/: FakeBaseOdomNode.cpp
src/visualization/: EnvironmentCollisionVisualization.cpp  MobileManipulatorVisualization.cpp  SphereSelfCollisionVisualization.cpp
